--- a/.github/workflows/flask.yaml
+++ b/.github/workflows/flask.yaml
@@ -26,7 +26,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Execute
       run: |
-        # TODO: Test Unit
+        pytest
