--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
     executors:
       python:
         docker:
-          - image: circleci/python:3.10.6
+          - image: cimg/python:3.10.6
     commands:
       install-deps:
         steps:
