--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,22 @@
+attrs==22.1.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
 Flask==2.2.2
 Flask-Scss==0.5
+idna==3.4
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.9
 pyScss==1.4.0
+pytest==7.1.3
+requests==2.28.1
 six==1.16.0
+tomli==2.0.1
+urllib3==1.26.12
 Werkzeug==2.2.2
