--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,11 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# npm 
+node_modules/
+package-lock.json
+
+# postcss
+static/css
+static/.webassets-cache
