--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 Flask==2.2.2
+Flask-Assets==2.0
 Flask-Scss==0.5
 idna==3.4
 iniconfig==1.1.1
@@ -14,9 +15,10 @@ pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.9
 pyScss==1.4.0
-pytest==7.1.3
+pytest==7.2.0
 requests==2.28.1
 six==1.16.0
 tomli==2.0.1
 urllib3==1.26.12
+webassets==2.0
 Werkzeug==2.2.2
