--- a/.github/workflows/flask.yaml
+++ b/.github/workflows/flask.yaml
@@ -28,6 +28,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        npm install --save
     - name: Execute
       run: |
         pytest
