--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "lanotte24ore",
   "version": "1.0.0",
   "description": "<p align=\"center\"><img src=\"https://github.com/owosrl/LaNotte24Ore/raw/main/assets/img/logo/logo_nobg.png\"></img></p>",
-  "main": "index.js",
+  "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env TAILWIND_MODE=watch NODE_ENV=development postcss ./web/static/src/css/style.css -o ./web/static/css/style.css -w",
+    "build:prod": "cross-env TAILWIND_MODE=build NODE_ENV=production postcss ./web/static/src/css/style.css -o ./web/static/css/style.css"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,8 @@
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
+    "cross-env": "^7.0.3",
+    "cssnano": "^5.1.14",
     "flowbite": "^1.5.4",
     "postcss": "^8.4.19",
     "postcss-cli": "^10.0.0",
