--- a/.github/workflows/flask.yaml
+++ b/.github/workflows/flask.yaml
@@ -12,18 +12,20 @@ on:
 permissions:
   contents: read
 
+env:
+      NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
+
 jobs:
-  build:
-
+  deployment:
     runs-on: ubuntu-latest
-
+    enviroment: testing
     steps:
     - uses: actions/checkout@v3
-    - name: Test Execution and Endpoints
+    - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
         python-version: "3.10.6"
-    - name: Install dependencies
+    - name: Install Python and Node dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pytest
@@ -32,6 +34,6 @@ jobs:
     - name: Compile CSS
       run: |
         npm run dev
-    - name: Execute
+    - name: Endpoints test
       run: |
         python -m pytest -v
