--- a/.github/workflows/flask.yaml
+++ b/.github/workflows/flask.yaml
@@ -18,7 +18,7 @@ env:
 jobs:
   deployment:
     runs-on: ubuntu-latest
-    enviroment: testing
+    environment: testing
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.9
