--- a/.github/workflows/flask.yaml
+++ b/.github/workflows/flask.yaml
@@ -16,7 +16,7 @@ env:
       NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
 
 jobs:
-  deployment:
+  test:
     runs-on: ubuntu-latest
     environment: testing
     steps:
