--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,13 @@ iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+newsapi-python==0.2.6
 packaging==21.3
 pluggy==1.0.0
 pyparsing==3.0.9
 pyScss==1.4.0
 pytest==7.2.0
+python-dotenv==0.21.0
 requests==2.28.1
 six==1.16.0
 tomli==2.0.1
