--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "flowbite": "^1.5.4",
     "postcss": "^8.4.19",
     "postcss-cli": "^10.0.0",
+    "postcss-import": "^15.0.0",
+    "postcss-nested": "^6.0.0",
+    "postcss-nesting": "^10.2.0",
     "tailwindcss": "^3.2.4"
   }
 }
