--- a/.github/workflows/flask.yaml
+++ b/.github/workflows/flask.yaml
@@ -14,6 +14,8 @@ permissions:
 
 env:
       NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
+      WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
+      IPINFO_API_KEY: ${{ secrets.IPINFO_API_KEY }}
       DATABASE_URI: ${{ secrets.DATABASE_URI }}
       DATABASE_KEY: ${{ secrets.DATABASE_KEY }}
 
