--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "postcss-nested": "^6.0.0",
     "postcss-nesting": "^10.2.0",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "install": "^0.13.0",
+    "npm": "^9.1.2"
   }
 }
