--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ share/python-wheels/
 MANIFEST
 .flaskenv
 
+# MacOS DS Store
+.DS_Store
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
