--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "",
   "scripts": {
     "dev": "cross-env TAILWIND_MODE=watch NODE_ENV=development postcss ./web/static/src/css/style.css -o ./web/static/css/style.css -w",
-    "build:prod": "cross-env TAILWIND_MODE=build NODE_ENV=production postcss ./web/static/src/css/style.css -o ./web/static/css/style.css"
+    "build:prod": "cross-env TAILWIND_MODE=build NODE_ENV=production postcss ./web/static/src/css/style.css -o ./web/static/css/style.css",
+    "build:dev": "cross-env TAILWIND_MODE=build NODE_ENV=development postcss ./web/static/src/css/style.css -o ./web/static/css/style.css"
+
   },
   "repository": {
     "type": "git",
