--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -1,13 +1,13 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: LaNotte24Ore CI/CD
+name: LaNotte24Ore CI/CD Development
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "dev" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "dev" ]
 
 permissions:
   contents: read
@@ -23,12 +23,12 @@ env:
       
 
 jobs:
-  test:
+  Deployment:
     runs-on: ubuntu-latest
-    environment: production
+    environment: development
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.9
+    - name: Set up Python
       uses: actions/setup-python@v3
       with:
         python-version: "3.10.6"
