--- a/.github/workflows/pull_image.yaml
+++ b/.github/workflows/pull_image.yaml
@@ -17,6 +17,8 @@ jobs:
       uses: docker/setup-qemu-action@v2
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+      with:
+        platforms: linux/amd64,linux/arm64,linux/riscv64,linux/mips64
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
