--- a/.github/workflows/pull_image.yaml
+++ b/.github/workflows/pull_image.yaml
@@ -31,4 +31,5 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
+        platforms: linux/amd64,linux/arm64,linux/riscv64,linux/mips64
         tags: ghcr.io/owosrl/lanotte24ore:latest
