--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,10 +40,7 @@
 	},
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": {
-		"python": "pip3 install -r requirements.txt",
-		"node": "npm install --save"
-	}
+	"postCreateCommand": "pip3 install -r requirements.txt && npm install --save"
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
