--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aniso8601==9.0.1
 anyio==3.6.2
 async-timeout==4.0.2
 attrs==22.2.0
+autopep8==2.0.2
 bleach==6.0.0
 cachetools==5.3.0
 certifi==2022.12.7
@@ -11,6 +12,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 click-log==0.4.0
 colorama==0.4.6
+country-converter==1.0.0
 dataclasses==0.6
 deprecation==2.1.0
 docutils==0.19
@@ -21,6 +23,10 @@ geojson==2.5.0
 gitdb==4.0.10
 GitPython==3.1.30
 gotrue==1.0.0
+graphene==3.2.1
+graphql-core==2.3.2
+graphql-relay==3.2.0
+graphql-server-core==1.2.0
 h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
@@ -29,6 +35,7 @@ importlib-metadata==6.0.0
 iniconfig==2.0.0
 invoke==1.7.3
 ipinfo==4.4.2
+iso-639==0.4.5
 itsdangerous==2.1.2
 jaraco.classes==3.2.3
 Jinja2==3.1.2
@@ -37,11 +44,16 @@ MarkupSafe==2.1.2
 more-itertools==9.0.0
 multidict==6.0.4
 newsapi-python==0.2.6
+numpy==1.24.2
 packaging==23.0
+pandas==1.5.3
 pkginfo==1.9.6
 pluggy==1.0.0
 postgrest-py==0.10.3
 promise==2.3
+py==1.11.0
+pycodestyle==2.10.0
+pycountry==22.3.5
 pydantic==1.10.4
 Pygments==2.14.0
 pyowm==3.3.0
@@ -52,12 +64,15 @@ python-dateutil==2.8.2
 python-dotenv==0.21.1
 python-gitlab==3.13.0
 python-semantic-release==7.33.0
+pytz==2022.7.1
 readme-renderer==37.3
 realtime==1.0.0
 requests==2.28.2
 requests-toolbelt==0.10.1
+reverse-geocoder==1.5.1
 rfc3986==1.5.0
 Rx==1.6.3
+scipy==1.10.0
 semver==2.13.0
 six==1.16.0
 smmap==5.0.0
