--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.8.3
 aiosignal==1.3.1
+airportsdata==20230323
 aniso8601==9.0.1
 anyio==3.6.2
 async-timeout==4.0.2
@@ -17,6 +18,7 @@ dataclasses==0.6
 deprecation==2.1.0
 docutils==0.19
 dotty-dict==1.3.1
+exceptiongroup==1.1.1
 Flask==2.2.2
 frozenlist==1.3.3
 geojson==2.5.0
