--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,32 @@
-aiohttp==3.8.3
+aiohttp==3.8.4
 aiosignal==1.3.1
 airportsdata==20230323
-aniso8601==9.0.1
 anyio==3.6.2
 async-timeout==4.0.2
 attrs==22.2.0
-autopep8==2.0.2
 bleach==6.0.0
 cachetools==5.3.0
 certifi==2022.12.7
-charset-normalizer==2.1.1
+charset-normalizer==3.1.0
 click==8.1.3
 click-log==0.4.0
 colorama==0.4.6
 country-converter==1.0.0
-dataclasses==0.6
 deprecation==2.1.0
 docutils==0.19
 dotty-dict==1.3.1
 exceptiongroup==1.1.1
-Flask==2.2.2
+Flask==2.2.3
 frozenlist==1.3.3
 geojson==2.5.0
 gitdb==4.0.10
-GitPython==3.1.30
+GitPython==3.1.31
 gotrue==1.0.0
 h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
 idna==3.4
-importlib-metadata==6.0.0
+importlib-metadata==6.1.0
 iniconfig==2.0.0
 invoke==1.7.3
 ipinfo==4.4.2
@@ -39,55 +36,47 @@ jaraco.classes==3.2.3
 Jinja2==3.1.2
 keyring==23.13.1
 MarkupSafe==2.1.2
-more-itertools==9.0.0
+more-itertools==9.1.0
 multidict==6.0.4
-newsapi-python==0.2.6
+newsapi-python==0.2.7
 numpy==1.24.2
 packaging==23.0
 pandas==1.5.3
 pkginfo==1.9.6
 pluggy==1.0.0
-postgrest-py==0.10.3
-promise==2.3
-py==1.11.0
-pycodestyle==2.10.0
-pycountry==22.3.5
-pydantic==1.10.4
+postgrest==0.10.6
+pydantic==1.10.7
 Pygments==2.14.0
 pyowm==3.3.0
-pyparsing==3.0.9
 PySocks==1.7.1
-pytest==7.2.0
+pytest==7.2.2
 python-dateutil==2.8.2
-python-dotenv==0.21.1
+python-dotenv==1.0.0
 python-gitlab==3.13.0
-python-semantic-release==7.33.0
-pytz==2022.7.1
+python-semantic-release==7.33.2
+pytz==2023.3
 readme-renderer==37.3
 realtime==1.0.0
 requests==2.28.2
 requests-toolbelt==0.10.1
-reverse-geocoder==1.5.1
 rfc3986==1.5.0
-Rx==1.6.3
-scipy==1.10.0
 semver==2.13.0
 six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
-storage3==0.5.0
-supabase==1.0.0
+storage3==0.5.2
+StrEnum==0.4.10
+supabase==1.0.2
 supafunc==0.2.2
 tomli==2.0.1
-tomlkit==0.11.6
-tqdm==4.64.1
+tomlkit==0.11.7
+tqdm==4.65.0
 twine==3.8.0
-typing_extensions==4.4.0
-urllib3==1.26.14
+typing_extensions==4.5.0
+urllib3==1.26.15
 waitress==2.1.2
-webassets==2.0
 webencodings==0.5.1
 websockets==10.4
 Werkzeug==2.2.3
 yarl==1.8.2
-zipp==3.12.1
+zipp==3.15.0
